Git Helper verbesserung und Changelog modrinth friendly machen